# prismatic-demo

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: database.py  exceptions.py
commerce-nexus/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
commerce-nexus/alembic/versions/: 20260721_0001_initial.py  20260722_0002_prismatic_delivery.py  20260724_0003_system_settings.py
commerce-nexus/app/: __init__.py  config.py  logging_config.py  main.py  seed.py
commerce-nexus/app/api/: deps.py  router.py
commerce-nexus/app/api/routes/: customers.py  integrations.py  webhooks.py
commerce-nexus/app/auth/: api_key.py
commerce-nexus/app/events/: dispatcher.py
commerce-nexus/app/frontend/static/: index.html
commerce-nexus/app/frontend/static/css/: styles.css
commerce-nexus/app/frontend/static/js/: app.js
commerce-nexus/app/models/: __init__.py  entities.py
commerce-nexus/app/schemas/: __init__.py  common.py  customer.py  event.py  integration.py  tenant.py  webhook.py
commerce-nexus/app/services/: customers.py  idempotency.py  orders.py  products.py  system_settings.py  webhooks.py
commerce-nexus/requests/: demo.http
commerce-nexus/tests/: conftest.py  test_api.py
integration-nexus-odoo/: documentation.md  package-lock.json  package.json
nexus-odoo/: documentation.md  guide.md  integration_id.txt  keys.yml  package-lock.json  package.json  tsconfig.json  (+1 more)
nexus-odoo-code-native-integration/: .npmrc  README.md  package-lock.json  package.json
odoo/: README.md  (+1 more)
(+258 files in other folders)
