[project]
name = "veridata-commerce-nexus"
version = "0.1.0"
description = "Veridata Commerce Nexus: a multi-tenant B2B order and integration hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0,<2",
    "email-validator>=2.2.0,<3",
    "fastapi>=0.115.0,<1",
    "httpx>=0.28.0,<1",
    "psycopg[binary]>=3.2.0,<4",
    "pydantic-settings>=2.7.0,<3",
    "pyjwt[crypto]>=2.10.0,<3",
    "sqlalchemy>=2.0.36,<3",
    "uvicorn[standard]>=0.34.0,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-cov>=6.0.0,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
